register, login, logout functionality added

--- a/config/default.env
+++ b/config/default.env
@@ -1,10 +1,11 @@
 
-MONGO_URI=
+MONGO_URI=mongodb+srv://sayuj:t8QSKdwJMV7LI7Vw@cluster0.8huaen9.mongodb.net/iionfooddelivery?retryWrites=true&w=majority
 DEV_ORIGIN=http://localhost:3000
 PROD_ORIGIN=
 
-JWT_SECRET=asdfqwerasdf1234afsdfasf
+JWT_SECRET=jadsfljquewroiuewfj33jlk
 JWT_EXPIRE=1d
 JWT_COOKIE_EXPIRE=1
+JWT_ALGORITHM=HS256
 
 DEV_ORIGIN=development
